fixed side pannel spacing

--- a/style.css
+++ b/style.css
@@ -237,6 +237,7 @@
   width: 293px;
   margin-top: 55px;
   margin-bottom: 24px;
+  margin-left: 10px;
   position: fixed;
   display: flex;
   justify-content: start;
@@ -258,6 +259,7 @@
   height: 256px;
   width: 293px;
   margin-top: 135px;
+  margin-left: 10px;
   position: fixed;
   display: flex;
   flex-direction: column;
@@ -304,6 +306,7 @@
   height: 74px;
   width: 293px;
   margin-top: 424px;
+  margin-left: 10px;
   position: fixed;
   display: flex;
   flex-direction: column;
